...
            android:layout_height="0dp"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="20dp"
            android:gravity="top|start"
            android:text="@{step.description}"
            android:visibility="@{step != null ? View.VISIBLE : View.INVISIBLE}"
            app:layout_constraintBottom_toTopOf="@id/recipe_preparation_step_details_fragment_previous_step"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/recipe_preparation_step_details_fragment_middle_guideline"
            tools:text="Melt butter and bittersweet chocolate" />

        <ImageView
...
            android:src="@drawable/ic_chevron_left_grey600_24dp"
            android:visibility="@{canGoPrevious ? View.VISIBLE : View.INVISIBLE}"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <ImageView
            android:id="@+id/recipe_preparation_step_details_fragment_next_step"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="10dp"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:onClick="@{() -> listener.onNextClick()}"
...
