...

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ImageView
                    android:id="@+id/recipe_card_view_image"
                    android:layout_width="match_parent"
                    android:layout_height="173dp"
                    android:scaleType="centerCrop"
                    android:src="@drawable/recipe_card_default_image"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
...
