...

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recipe_list_fragment_recipes"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_margin="@dimen/recipe_list_fragment_recipes_margin"
            android:visibility="@{!loading &amp;&amp; !empty &amp;&amp; !error ? View.VISIBLE : View.INVISIBLE}"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
...
